--- a/src/components/MobileMenu.astro
+++ b/src/components/MobileMenu.astro
@@ -1,15 +1,8 @@
 ---
 import type { NavData } from "../content/menuItems";
+import { resolveHref } from "../lib/resolveHref";
 
 const { nav } = Astro.props as { nav: NavData };
-
-const resolveHref = (href: string) => {
-    if (!href) return "#";
-    if (href.startsWith("#")) return href;
-    if (href.startsWith("http")) return href;
-
-    return `${import.meta.env.BASE_URL}${href}`;
-};
 ---
 
 <div
