--- a/src/pages/web.astro
+++ b/src/pages/web.astro
@@ -3,8 +3,11 @@ import Hero from "../components/Hero.astro";
 import Layout from "../layouts/Layout.astro";
 import { NAV_WEB } from "../content/menuItems";
 import { HERO_WEB } from "../content/hero";
+import { PORTFOLIO_WEB } from "../content/portfolio";
+import Portfolio from "../components/Portfolio.astro";
 ---
 
 <Layout nav={NAV_WEB}>
     <Hero data={HERO_WEB} />
+    <Portfolio data={PORTFOLIO_WEB} />
 </Layout>
