--- a/src/pages/web.astro
+++ b/src/pages/web.astro
@@ -5,9 +5,12 @@ import { NAV_WEB } from "../content/menuItems";
 import { HERO_WEB } from "../content/hero";
 import { PORTFOLIO_WEB } from "../content/portfolio";
 import Portfolio from "../components/Portfolio.astro";
+import FaqSection from "../components/FaqSection.astro";
+import { FAQ_WEB } from "../content/faq";
 ---
 
 <Layout nav={NAV_WEB}>
     <Hero data={HERO_WEB} />
     <Portfolio data={PORTFOLIO_WEB} />
+    <FaqSection data={FAQ_WEB} />
 </Layout>
