feat: add gradient backgrounds and improve FAQ details UX

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -8,7 +8,7 @@ import { ABOUT } from "../content/about";
 import ContentDescription from "./ContentDescription.astro";
 ---
 
-<section id={ABOUT.id} class="bg-dark scroll-mt-15 md:scroll-mt-22.5">
+<section id={ABOUT.id} class="bg-radial-dark scroll-mt-15 md:scroll-mt-22.5">
     <div
         data-aos="fade-up"
         class="max-w-360 items-center justify-center m-auto py-10 md:py-30 px-5 lg:px-1"
