--- a/src/components/ContactSection.astro
+++ b/src/components/ContactSection.astro
@@ -6,7 +6,7 @@ import ContentDescription from "./ContentDescription.astro";
 import Form from "./Form.astro";
 ---
 
-<section id={CONTACT.id} class="bg-dark scroll-mt-15 md:scroll-mt-22.5">
+<section id={CONTACT.id} class="bg-radial-dark scroll-mt-15 md:scroll-mt-22.5">
     <div
         data-aos="fade-up"
         class="max-w-360 items-center justify-center m-auto pt-10 pb-0 md:py-30 px-5 lg:px-1"
