--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -17,7 +17,7 @@ const homeHref = resolveHref(nav.homeHref ?? "#home");
          z-50 flex text-center"
 >
     <div
-        class="w-full max-w-360 mx-auto flex items-center justify-between gap-5"
+        class="w-full max-w-360 mx-auto px-5 flex items-center justify-between gap-5"
     >
         <a
             href={homeHref}
