--- a/src/components/Portfolio.astro
+++ b/src/components/Portfolio.astro
@@ -10,7 +10,7 @@ const { data } = Astro.props as { data: PortfolioData };
 
 <section
     id={data.id}
-    class="bg-dark scroll-mt-15 md:scroll-mt-22.5 pb-10 md:pb-30"
+    class="bg-radial-dark scroll-mt-15 md:scroll-mt-22.5 pb-10 md:pb-30"
 >
     <div
         data-aos="fade-up"
