feat: add AdvantagesSection with layout and content, apply minor visual improvements

--- a/src/components/PortfolioSlider.astro
+++ b/src/components/PortfolioSlider.astro
@@ -18,7 +18,7 @@ const loopItems =
           ).flat();
 ---
 
-<div class="relative text-secondary">
+<div data-aos="fade-up" class="relative text-secondary">
     <SliderButton direction="prev" ariaLabel="Previous">
         <LeftArrow class="w-5 h-5 md:w-7 md:h-7" />
     </SliderButton>
