--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -35,7 +35,7 @@ import { SERVICES } from "../content/services";
                                 {service.title}
                             </h4>
 
-                            <div class="text-primary group-hover:text-secondary group-active:text-secondary">
+                            <div class="text-primary text-sm md:text-lg group-hover:text-secondary group-active:text-secondary">
                                 <p>{service.description}</p>
                             </div>
 
