--- a/src/components/DescriptionSection.astro
+++ b/src/components/DescriptionSection.astro
@@ -19,7 +19,7 @@ const { data } = Astro.props as { data: DescriptionData };
         <ContentSubHeader text={data.subHeader} class="gradient-dark" />
         <ContentDescription
             text={data.description}
-            class="text-start text-primary"
+            class="text-center text-primary"
         />
         <div class="mt-10 md:mt-15">
             <h3
