refactor(nav): change breakpoint to display desktop menu from lg

--- a/src/components/BurgerButton.astro
+++ b/src/components/BurgerButton.astro
@@ -1,6 +1,6 @@
 <button
     id="burger"
-    class="group relative w-8 h-8 md:hidden z-50"
+    class="group relative w-8 h-8 lg:hidden z-50"
     aria-expanded="false"
 >
     <span
@@ -14,7 +14,7 @@
                -translate-x-1/2 translate-y-0
                group-[.open]:opacity-0"
     ></span>
-    
+
     <span
         class="absolute left-1/2 top-1/2 w-6 h-0.5 bg-secondary rounded transition-all duration-300 ease-in-out
                -translate-x-1/2 translate-y-2.5
