--- a/src/components/MobileMenu.astro
+++ b/src/components/MobileMenu.astro
@@ -7,7 +7,7 @@ const { nav } = Astro.props as { nav: NavData };
 
 <div
     id="mobile-menu"
-    class="fixed top-15 left-0 w-full flex flex-col items-center bg-primary px-6 gap-4 md:hidden z-60 overflow-hidden max-h-0 transition-all duration-300 ease-in-out"
+    class="fixed top-15 left-0 w-full flex flex-col items-center bg-primary px-6 gap-4 lg:hidden z-60 overflow-hidden max-h-0 transition-all duration-300 ease-in-out"
 >
     {
         nav.menu.map((item) => (
